[package]
name = "terminusdb-layer-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["io"]}
tokio-stream = "0.1"
futures = "0.3"
terminus-store = "0.21.0"
regex = "1.7.3"
lazy_static = "1.4"
bytes = "1.4"
clap = {version = "4.2", features=["derive"]}